@@ -1,5 +1,10 @@
 2008-02-11  Neal H. Walfield  <neal@gnu.org>
 
+	* folio.h (folio_t): New definition.
+	* thread.h (thread_t): Likewise.
+
+2008-02-11  Neal H. Walfield  <neal@gnu.org>
+
 	* thread.h (thread_start): New function.
 
 2008-02-08  Thomas Schwinge  <tschwinge@gnu.org>
